add /me route
